[gd_scene load_steps=22 format=3 uid="uid://enmoeaumacog"]

[ext_resource type="Script" uid="uid://cti3uncuqhvuc" path="res://scenes/player.gd" id="1_qfm1y"]
[ext_resource type="Resource" uid="uid://dgif1o6o8hlls" path="res://resources/equipment/test_sword.tres" id="2_fulsm"]
[ext_resource type="Script" uid="uid://bni40py7vl8cw" path="res://equipment.gd" id="3_4r5pv"]
[ext_resource type="Resource" uid="uid://c3ss1hyy88c8f" path="res://resources/equipment/test_twohandsword.tres" id="4_60mlk"]
[ext_resource type="Resource" uid="uid://31jgm06mt7ms" path="res://resources/equipment/test_shield.tres" id="5_i4ail"]
[ext_resource type="Script" uid="uid://bhswmu2hpphn7" path="res://scenes/stance.gd" id="6_a38lo"]
[ext_resource type="Script" uid="uid://cafxh3oene4uk" path="res://scenes/stats.gd" id="7_4ni07"]
[ext_resource type="Texture2D" uid="uid://dxq7t1knkjyqg" path="res://assets/sword_sprite.png" id="8_l71n6"]
[ext_resource type="AudioStream" uid="uid://dpnrs5viwr7jj" path="res://assets/death_yoda.mp3" id="9_f1ej7"]
[ext_resource type="Texture2D" uid="uid://4ba3q6b0g4ls" path="res://assets/shield2.png" id="9_ke2ow"]
[ext_resource type="Texture2D" uid="uid://bd3ppe7x3vomr" path="res://assets/fpshands/hand_s.png" id="10_ujl30"]
[ext_resource type="Script" uid="uid://24tkivt38wsk" path="res://scenes/deco_ray_cast_3d.gd" id="15_oprun"]
[ext_resource type="Texture2D" uid="uid://b5l61op0q8mke" path="res://assets/octagon.png" id="15_wnwbv"]
[ext_resource type="AudioStream" uid="uid://dvrj4ht2pdiwk" path="res://assets/sword-sound-2-36274.mp3" id="16_gl8cc"]
[ext_resource type="AudioStream" uid="uid://d0w3qegtsjh55" path="res://assets/block-6839.mp3" id="17_487ah"]

[sub_resource type="CanvasTexture" id="CanvasTexture_qfm1y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3mio"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qyji"]
bg_color = Color(0, 0.47, 0.2115, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5n2y"]
bg_color = Color(0.55, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_0qyji"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3v2ag"]
radius = 0.2

[node name="Player" type="StaticBody3D" node_paths=PackedStringArray("sword_art_l", "shield_art_l", "sword_art_r", "shield_art_r")]
physics_interpolation_mode = 1
script = ExtResource("1_qfm1y")
stuff = Array[ExtResource("3_4r5pv")]([ExtResource("2_fulsm"), ExtResource("4_60mlk"), ExtResource("5_i4ail")])
sword_art_l = NodePath("_graphics/left_hand/_holder/_sword")
shield_art_l = NodePath("_graphics/left_hand/_holder/_Shield")
sword_art_r = NodePath("_graphics/right_hand/_holder/_sword")
shield_art_r = NodePath("_graphics/right_hand/_holder/_Shield")
metadata/_custom_type_script = "uid://cti3uncuqhvuc"

[node name="Camera3D" type="Camera3D" parent="."]
current = true

[node name="_ui_stance" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.222)

[node name="octagon" type="Sprite3D" parent="Camera3D/_ui_stance"]
modulate = Color(0, 0, 0, 1)
pixel_size = 0.0003
texture = ExtResource("15_wnwbv")

[node name="R" type="Sprite3D" parent="Camera3D/_ui_stance"]
transform = Transform3D(0.75, 0, 0, 0, 9.5, 0, 0, 0, 1, 0.117, 0.003, 0)
visible = false
render_priority = 2
texture = SubResource("CanvasTexture_qfm1y")

[node name="BR" type="Sprite3D" parent="Camera3D/_ui_stance"]
transform = Transform3D(6.71751, -0.53033, 0, 6.71751, 0.53033, 0, 0, 0, 1, 0.0828094, -0.079716, 0)
visible = false
render_priority = 2
texture = SubResource("CanvasTexture_qfm1y")

[node name="B" type="Sprite3D" parent="Camera3D/_ui_stance"]
transform = Transform3D(9.5, 0, 0, 0, 0.75, 0, 0, 0, 1, 0.000674158, -0.114318, 0)
visible = false
render_priority = 2
texture = SubResource("CanvasTexture_qfm1y")

[node name="BL" type="Sprite3D" parent="Camera3D/_ui_stance"]
transform = Transform3D(6.71751, 0.53033, 0, -6.71751, 0.53033, 0, 0, 0, 1, -0.0825252, -0.079422, 0)
visible = false
render_priority = 2
texture = SubResource("CanvasTexture_qfm1y")

[node name="L" type="Sprite3D" parent="Camera3D/_ui_stance"]
transform = Transform3D(0.75, 0, 0, 0, 9.5, 0, 0, 0, 1, -0.117, 0.00336599, 0)
visible = false
render_priority = 2
texture = SubResource("CanvasTexture_qfm1y")

[node name="TL" type="Sprite3D" parent="Camera3D/_ui_stance"]
transform = Transform3D(6.71751, -0.53033, 0, 6.71751, 0.53033, 0, 0, 0, 1, -0.0820658, 0.086023, 0)
visible = false
render_priority = 2
texture = SubResource("CanvasTexture_qfm1y")

[node name="T" type="Sprite3D" parent="Camera3D/_ui_stance"]
transform = Transform3D(9.5, 0, 0, 0, 0.75, 0, 0, 0, 1, 0.001, 0.12, 0)
visible = false
render_priority = 2
texture = SubResource("CanvasTexture_qfm1y")

[node name="TR" type="Sprite3D" parent="Camera3D/_ui_stance"]
transform = Transform3D(6.71751, 0.53033, 0, -6.71751, 0.53033, 0, 0, 0, 1, 0.0825523, 0.0865488, 0)
visible = false
render_priority = 2
texture = SubResource("CanvasTexture_qfm1y")

[node name="_graphics" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="left_hand" type="Control" parent="_graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 302)

[node name="_holder" type="Control" parent="_graphics/left_hand"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 69.0
offset_top = -16.0
offset_right = 69.0
offset_bottom = -16.0
grow_vertical = 2

[node name="_sword" type="TextureRect" parent="_graphics/left_hand/_holder"]
visible = false
layout_mode = 0
offset_left = -81.0
offset_top = -246.0
offset_right = 281.0
offset_bottom = 116.0
rotation = 0.10472
texture = ExtResource("8_l71n6")
expand_mode = 1
flip_h = true
flip_v = true

[node name="_Shield" type="TextureRect" parent="_graphics/left_hand/_holder"]
layout_mode = 0
offset_left = -44.0
offset_top = -58.0
offset_right = 165.0
offset_bottom = 238.0
rotation = 0.0349066
texture = ExtResource("9_ke2ow")
expand_mode = 1

[node name="_hand" type="TextureRect" parent="_graphics/left_hand/_holder"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
rotation = -0.0523599
texture = ExtResource("10_ujl30")
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="right_hand" type="Control" parent="_graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 302)

[node name="_holder" type="Control" parent="_graphics/right_hand"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -16.0
offset_right = -163.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 2

[node name="_sword" type="TextureRect" parent="_graphics/right_hand/_holder"]
layout_mode = 0
offset_left = -164.0
offset_top = -200.0
offset_right = 198.0
offset_bottom = 162.0
rotation = -0.10472
texture = ExtResource("8_l71n6")
expand_mode = 1
flip_v = true

[node name="_Shield" type="TextureRect" parent="_graphics/right_hand/_holder"]
visible = false
layout_mode = 0
offset_left = -50.0
offset_top = -45.0
offset_right = 159.0
offset_bottom = 251.0
rotation = -0.0349066
texture = ExtResource("9_ke2ow")
expand_mode = 1
flip_h = true

[node name="_hand" type="TextureRect" parent="_graphics/right_hand/_holder"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
rotation = 0.0523599
texture = ExtResource("10_ujl30")
metadata/_edit_use_anchors_ = true

[node name="Stance" type="Node" parent="." node_paths=PackedStringArray("stats", "temp_timer_stam", "temp_octagon_display", "audio_player_miss", "audio_player_hit")]
script = ExtResource("6_a38lo")
slots = Array[int]([0, -1, -1, -1, 1, -1, -1, -1])
hands = Array[ExtResource("3_4r5pv")]([ExtResource("4_60mlk"), ExtResource("5_i4ail")])
stats = NodePath("../Stats")
temp_timer_stam = NodePath("../Stats/Timer_Stam")
temp_octagon_display = [NodePath("../Camera3D/_ui_stance/R"), NodePath("../Camera3D/_ui_stance/BR"), NodePath("../Camera3D/_ui_stance/B"), NodePath("../Camera3D/_ui_stance/BL"), NodePath("../Camera3D/_ui_stance/L"), NodePath("../Camera3D/_ui_stance/TL"), NodePath("../Camera3D/_ui_stance/T"), NodePath("../Camera3D/_ui_stance/TR")]
audio_player_miss = NodePath("../AudioStreamPlayer2")
audio_player_hit = NodePath("../AudioStreamPlayer")

[node name="Stats" type="Node" parent="." node_paths=PackedStringArray("health_bar", "temp_damage_indicator", "audio_death", "stam_bar")]
script = ExtResource("7_4ni07")
max_health = 50
current_health = 50
health_bar = NodePath("Control/ProgressBar2")
temp_damage_indicator = NodePath("../temp_hit_effect")
audio_death = NodePath("AudioStreamPlayer3")
max_stamina = 50.0
current_stamina = 50.0
stam_bar = NodePath("Control/ProgressBar")
base_damage = 1
base_defence = 1

[node name="Timer_Stam" type="Timer" parent="Stats"]
wait_time = 3.0
one_shot = true

[node name="Control" type="Control" parent="Stats"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="Stats/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.164
anchor_top = 0.877
anchor_right = 0.845
anchor_bottom = 0.899
offset_left = 9.8
offset_top = -0.200012
offset_right = 10.0
offset_bottom = 0.0999756
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_v3mio")
theme_override_styles/fill = SubResource("StyleBoxFlat_0qyji")
value = 100.0
rounded = true
show_percentage = false

[node name="ProgressBar2" type="ProgressBar" parent="Stats/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.164
anchor_top = 0.898
anchor_right = 0.845
anchor_bottom = 0.943
offset_left = 9.8
offset_top = 0.199951
offset_right = 10.0
offset_bottom = 0.200012
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_v3mio")
theme_override_styles/fill = SubResource("StyleBoxFlat_a5n2y")
value = 100.0
rounded = true
show_percentage = false

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Stats"]
stream = ExtResource("9_f1ej7")

[node name="temp_hit_effect" type="TextureRect" parent="."]
visible = false
modulate = Color(0.839216, 0.0784314, 0, 0.47451)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1453, 805)
texture = SubResource("CanvasTexture_0qyji")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_gl8cc")
volume_db = 14.054
pitch_scale = 0.78

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_487ah")
pitch_scale = 0.71

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_3v2ag")

[node name="Node" type="Node" parent="."]

[node name="Compass" type="Node3D" parent="Node"]

[node name="North" type="RayCast3D" parent="Node/Compass"]
target_position = Vector3(0, 0, -1.5)
debug_shape_custom_color = Color(0.393975, 0.469026, 1, 1)
script = ExtResource("15_oprun")

[node name="East" type="RayCast3D" parent="Node/Compass"]
target_position = Vector3(1.5, 0, 0)
debug_shape_custom_color = Color(0.764111, 0.166593, 1, 1)
script = ExtResource("15_oprun")

[node name="South" type="RayCast3D" parent="Node/Compass"]
target_position = Vector3(0, 0, 1.5)
script = ExtResource("15_oprun")

[node name="West" type="RayCast3D" parent="Node/Compass"]
target_position = Vector3(-1.5, 0, 0)
script = ExtResource("15_oprun")

[node name="OmniLight3D" type="OmniLight3D" parent="."]

[node name="label_interact" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.475
anchor_top = 0.480833
anchor_right = 0.525
anchor_bottom = 0.519167
offset_top = 75.5
offset_right = 3.05176e-05
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Stats/Timer_Stam" to="Stats" method="_on_timer_stam_timeout"]
[connection signal="on_body_entered" from="Node/Compass/North" to="." method="on_raycast_enter"]
[connection signal="on_body_entered" from="Node/Compass/North" to="Stance" method="_on_raycast_enter"]
[connection signal="on_body_exit" from="Node/Compass/North" to="Stance" method="_on_raycast_exit"]
